--- a/java_miniproject/java/pom.xml
+++ b/java_miniproject/java/pom.xml
@@ -7,12 +7,26 @@
   <version>1.0-SNAPSHOT</version>
   <name>java</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <maven.compiler.source>24</maven.compiler.source>
+    <maven.compiler.target>24</maven.compiler.target>
+  </properties>
   <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <version>42.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.toedter</groupId>
+      <artifactId>jcalendar</artifactId>
+      <version>1.4</version>
     </dependency>
   </dependencies>
 </project>
