--- a/java_miniproject/java/pom.xml
+++ b/java_miniproject/java/pom.xml
@@ -29,4 +29,16 @@
       <version>1.4</version>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <mainClass>com.myapp.App</mainClass>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
