--- a/java_miniproject/java/pom.xml
+++ b/java_miniproject/java/pom.xml
@@ -41,7 +41,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <mainClass>com.myapp.App</mainClass>
+          <mainClass>com.myapp.ui.App</mainClass>
         </configuration>
       </plugin>
     </plugins>
